--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ docs/_build/
 # PyBuilder
 target/
 
+# Deduplication
+deduplication/*.json
+deduplication/**/*.json
+deduplication/**/*.jpg
+!deduplication/test_images/*.jpg
