--- a/.gitignore
+++ b/.gitignore
@@ -67,10 +67,12 @@ target/
 *.DS_Store
 deduplication/*.json
 deduplication/**/*.json
+deduplication/**/*.jsonl
 deduplication/**/*.jpg
 #deduplication/**/*.gif
 deduplication/test_output_exact_deduplicated_images/
 deduplication/test_output_near_deduplicated_images/
 !deduplication/test_images/
+!deduplication/armslist-images.jsonl
 
 deduplication/data
